name:                botan
version:             0.1.0.0
synopsis:            Botan SDK for Haskell
description:         Botan is a telegram bot analytics system based on Yandex.Appmetrica
homepage:            https://github.com/botanio/sdk#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Rodiontsev
maintainer:          alex.rodiontsev@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Botan.Sdk
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , either
                     , text
                     , transformers
                     , http-client
                     , servant == 0.7.*
                     , servant-client == 0.7.*
  default-language:    Haskell2010

test-suite botan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , http-client
                     , http-client-tls
                     , servant-client
                     , text
                     , async
                     , hspec
                     , botan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/botanio/sdk
